Change endpoint POST /v3/area-of-use to POST /v3/points-in-aou
