# crs-catalog-core/src/main/java/org/opengroup/osdu/crs/api/CrsCatalogApiV3.java
@@ -21,7 +21,7 @@ import org.opengroup.osdu.crs.logging.AuditLogger;
 import org.opengroup.osdu.crs.model.request.CoordinateReferenceSystemsQuery;
 import org.opengroup.osdu.crs.model.request.CoordinateTransformationsQuery;
 import org.opengroup.osdu.crs.model.request.InPolygonQuery;
-import org.opengroup.osdu.crs.model.response.AreaOfUseSearchResult;
+import org.opengroup.osdu.crs.model.response.PointsInAouSearchResult;
 import org.opengroup.osdu.crs.model.response.SearchResponse;
 import org.opengroup.osdu.crs.service.AreaOfUseService;
 import org.opengroup.osdu.crs.service.SearchWrapperService;
@@ -83,8 +83,8 @@ public class CrsCatalogApiV3 {
 		return searchWrapperService.search(coordinateReferenceSystemsQuery, SearchWrapperService.COORDINATE_REFERENCE_SYSTEM_KIND);
 	}
 
-	@PostMapping("/area-of-use")
-	public AreaOfUseSearchResult getAouInfo(
+	@PostMapping("/points-in-aou")
+	public PointsInAouSearchResult getAouInfo(
 			@RequestBody InPolygonQuery inPolygonQuery
 			) {
 		return areaOfUseService.searchAou(inPolygonQuery);
