# docs/api_spec/crs-catalog-openapi-v3.yaml
@@ -114,7 +114,7 @@ paths:
           schema:
             $ref: '#/definitions/SearchResponse'
 
-  /area-of-use:
+  /points-in-aou:
     post:
       tags:
         - Area of Use
@@ -126,15 +126,15 @@ paths:
         - in: body
           name: body
           schema:
-            $ref: '#/definitions/AreaOfUseSearch'
+            $ref: '#/definitions/PointsInAOUSearch'
       responses:
         '200':
           description: A successful response
           schema:
-            $ref: '#/definitions/AreaOfUseResponse'
+            $ref: '#/definitions/PointsInAOUResponse'
 
 definitions:
-  AreaOfUseSearch:
+  PointsInAOUSearch:
     description: Body for checking points against Area of use
     properties:
       recordId:
@@ -145,7 +145,7 @@ definitions:
         description: List of points to check against CRS or CT polygon
         items:
           $ref: '#/definitions/Point'
-  AreaOfUseResponse:
+  PointsInAOUResponse:
     properties:
       successfulPoints:
         type: array
